[project]
name = "toyotama"
version = "0.9.7"
dependencies = ["gmpy2~=2.1.5", "rzpipe~=0.5.1", "requests~=2.31.0"]
dev-dependencies = [
  "black~=23.3.0",
  "autopep8~=2.0.2",
  "flake8~=6.0.0",
  "isort~=5.12.0",
]
description = "Python library for CTF."
authors = [{ name = "Laika", email = "laika@albina.cc" }]
maintainers = [{ name = "Laika", email = "laika@albina.cc" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Laika/Toyotama"
homepage = "https://github.com/Laika/Toyotama"
keywords = ["CTF"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
]

[tool.rye]
managed = true

[tool.poetry]
name = "toyotama"
version = "0.9.7"
description = "Python library for CTF."
authors = ["Laika <laika@albina.cc>"]
maintainers = ["Laika <laika@albina.cc>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Laika/Toyotama"
homepage = "https://github.com/Laika/Toyotama"
keywords = ["CTF"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
]
packages = [{ include = "toyotama" }]

[tool.poetry.dependencies]
python = ">=3.8"
gmpy2 = "^2.1.2"
r2pipe = "^1.6.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"

[build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
requires = ["hatchling"]
build-backend = "hatchling.build"
