[tool.poetry]
name = "toyotama"
version = "0.9.10"
description = "Python library for CTF."
authors = ["Laika <laika@albina.cc>"]
maintainers = ["Laika <laika@albina.cc>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Laika/Toyotama"
homepage = "https://github.com/Laika/Toyotama"
keywords = ["CTF"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]
packages = [{ include = "toyotama" }]

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.31.0"
pillow = "^10.2.0"
flask = "^3.0.0"
py7zr = "^0.20.8"
rzpipe = "^0.6.0"

[tool.poetry.scripts]
dcmp = "toyotama.util.decompress:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
hatch = "^1.9.1"

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff]
line-length = 150
target-version = "py312"

select = ["E", "F", "C90", "I", "N", "UP", "PERF", "PL"]
ignore = []

fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
unfixable = []

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
